# ClawArena

./: .gitignore  LICENSE  README.md  pyproject.toml
data/clawarena/: tests.json
data/clawarena/claude-code/: manifest.json
data/clawarena/metaclaw/: dummy.yaml  example.yaml  madmax.yaml  memory.yaml  rl-only-memory.yaml  rl-only.yaml  rl.yaml  skills-only.yaml  (+1 more)
data/metaclaw-bench/: tests.json
data/metaclaw-bench-small/: tests.json
docs/: README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  cli.md  data-structure.md  installation.md  metaclaw-guide.md  plugin.md  provider-usage-guide.md  submit-to-leaderboard.md
docs/data-spec/: data-synthesis-pitfalls.md  design-plan.md
helpers/: nanobot_runner.py  picoclaw_hook.py
scripts/: compare.py  env_example.sh  setup.sh  test_run.py
scripts/metaclaw-bench/: _common.sh  env.sh  run_mm_http_plugin.sh  run_mm_memory.sh  run_mm_multimodal.sh  run_mm_skill_memory.sh
scripts/metaclaw-bench-small/: _common.sh  env.sh  run_baseline.sh  run_mm_http_plugin.sh  run_mm_http_plugin_memory.sh  run_mm_http_plugin_skill.sh  run_mm_http_test.sh  run_mm_memory.sh  run_mm_skill.sh  run_mm_skill_memory.sh
src/clawarena/: cli.py  prompts.py  utils.py
submissions/: README.md
tests/: test_adapters.py  test_check.py  test_clean.py  test_compare.py  test_data_handler.py  test_engine_output.py  test_engines.py  test_io.py  test_metaclaw.py  test_mm_metaclaw.py  test_plugins.py  test_provider.py  test_qtypes.py  test_report.py  test_resume_infer.py  test_scoring.py  test_stats.py  test_types.py
(+2743 files in other folders)
